gobmkida/c3/dfa_prepare_for_match
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:986:12: error: expected expression
*( _OWORD *)( ( char *)&aux_count + v4) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:986:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&aux_count + v4) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:986:25: error: use of undeclared identifier 'aux_count'
*( _OWORD *)( ( char *)&aux_count + v4) = xmmword_4A7BD0; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:986:43: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( ( char *)&aux_count + v4) = xmmword_4A7BD0; 
                                          ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:987:12: error: expected expression
*( _OWORD *)( ( char *)&gpleft + v4) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:987:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&gpleft + v4) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:987:25: error: use of undeclared identifier 'gpleft'
*( _OWORD *)( ( char *)&gpleft + v4) = xmmword_4A7BD0; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:987:40: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( ( char *)&gpleft + v4) = xmmword_4A7BD0; 
                                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:988:12: error: expected expression
*( _OWORD *)&gtest.hash[v4 / 8] = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:988:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&gtest.hash[v4 / 8] = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:988:14: error: use of undeclared identifier 'gtest'
*( _OWORD *)&gtest.hash[v4 / 8] = xmmword_4A7BD0; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:988:35: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)&gtest.hash[v4 / 8] = xmmword_4A7BD0; 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:989:12: error: expected expression
*( _OWORD *)( v4 + 12154800) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:989:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154800) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:989:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154800) = xmmword_4A7BD0; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:990:12: error: expected expression
*( _OWORD *)( v4 + 12154816) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:990:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154816) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:990:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154816) = xmmword_4A7BD0; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:991:12: error: expected expression
*( _OWORD *)( v4 + 12154832) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:991:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154832) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:991:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154832) = xmmword_4A7BD0; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:992:12: error: expected expression
*( _OWORD *)( v4 + 12154848) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:992:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154848) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:992:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154848) = xmmword_4A7BD0; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:993:12: error: expected expression
*( _OWORD *)( v4 + 12154864) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:993:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154864) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:993:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154864) = xmmword_4A7BD0; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:994:12: error: expected expression
*( _OWORD *)( v4 + 12154880) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:994:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154880) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:994:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154880) = xmmword_4A7BD0; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:995:12: error: expected expression
*( _OWORD *)( v4 + 12154896) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:995:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154896) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:995:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154896) = xmmword_4A7BD0; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:996:12: error: expected expression
*( _OWORD *)( v4 + 12154912) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:996:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154912) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:996:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154912) = xmmword_4A7BD0; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:997:12: error: expected expression
*( _OWORD *)( v4 + 12154928) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:997:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154928) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:997:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154928) = xmmword_4A7BD0; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:998:12: error: expected expression
*( _OWORD *)( v4 + 12154944) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:998:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154944) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:998:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154944) = xmmword_4A7BD0; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:999:12: error: expected expression
*( _OWORD *)( v4 + 12154960) = xmmword_4A7BD0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:999:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 12154960) = xmmword_4A7BD0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/engine/matchpat.c:999:32: error: use of undeclared identifier 'xmmword_4A7BD0'
*( _OWORD *)( v4 + 12154960) = xmmword_4A7BD0; 
                               ^
45 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_prepare_for_match/src/obj/1/matchpat.o] Error 1
